@@ -18,7 +18,7 @@ HOSTS:
       epel:
         url: 'http://download.fedoraproject.org/pub/epel/7/$basearch'
         gpgkeys:
-          - https://getfedora.org/static/352C64E5.txt
+          - https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-$releasever
 
   el6-system:
     roles:
@@ -30,7 +30,7 @@ HOSTS:
       epel:
         url: 'http://download.fedoraproject.org/pub/epel/6/$basearch'
         gpgkeys:
-          - https://getfedora.org/static/0608B895.txt
+          - https://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-$releasever
 
 CONFIG:
   log_level: verbose
