@@ -1,4 +1,7 @@
-* Wed May 08 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.4.8-0
+* Fri Aug 02 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.5.0-0
+- Remove Puppet 4 support
+- Add Puppet 6 support
+- Add puppetlabs-stdlib 6 support
 - Maintenance: removed OBE build/rpm_metadata/requires
 
 * Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.4.7-0
